include/gemini3d.h

extern void sweep3_allspec_mass_C(double**, double**, void**, int*, void**, double*);
extern void sweep3_allspec_momentum_C(double**, double**, void**, int*, void**, double*);
extern void sweep3_allspec_energy_C(double**, double**, void**, int*, void**, double*);
extern void sweep1_allparams_C(double**, double**, void**, int*, void**, double*);
extern void sweep1_allspec_mass_C(double**, double**, void**, int*, void**, double*);
extern void sweep1_allspec_momentum_C(double**, double**, void**, int*, void**, double*);
extern void sweep1_allspec_energy_C(double**, double**, void**, int*, void**, double*);
extern void sweep2_allparams_C(double**, double**, void**, int*, void**, double*);
extern void sweep2_allspec_mass_C(double**, double**, void**, int*, void**, double*);
extern void sweep2_allspec_momentum_C(double**, double**, void**, int*, void**, double*);
extern void sweep2_allspec_energy_C(double**, double**, void**, int*, void**, double*);
extern void rhov12v1_C(double**, double**);
extern void VNRicht_artvisc_C(double**, void**);
extern void compression_C(double**, double**, void**, int*, void**, double*);
extern void rhoe2T_C(double**, double**);